@@ -1131,9 +1131,13 @@ Titles and Help for the System Fields
 	<epp:phrase id="Plugin/Screen:no_render_subclass">Error. $screen->render should be sub-classed for <epc:pin name="screen"/>.</epp:phrase>
    
     <epp:phrase id="Plugin/Screen/Items:title">Manage deposits</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Items:remove_column_confirm">Really remove this column from the display?</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Items:add">Add Column</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Review:title">Review</epp:phrase>
     <epp:phrase id="Plugin/Screen/Review:list_desc">Items under review</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Review:remove_column_confirm">Really remove this column from the display?</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Review:add">Add Column</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Status:title">Status</epp:phrase>
     <epp:phrase id="Plugin/Screen/DatabaseSchema:title">Database Schema</epp:phrase>
@@ -1884,6 +1888,8 @@ Titles and Help for the System Fields
 <epp:phrase id="datasethelp_request">Stores requests made for full-texts to be delivered by email</epp:phrase>
 
 <epp:phrase id="message_fieldopt_type_message">Message</epp:phrase>
+<epp:phrase id="message_fieldopt_type_warning">Warning</epp:phrase>
+<epp:phrase id="message_fieldopt_type_error">Error</epp:phrase>
 <epp:phrase id="message_fieldname_messageid">MessageID</epp:phrase>
 <epp:phrase id="message_fieldname_userid">UserID</epp:phrase>
 
